--- a/web/src/main/webapp/WEB-INF/view/page/LoginAfterRegistration.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/LoginAfterRegistration.jspx
@@ -5,13 +5,13 @@
     <html>
     <body style="background-color: powderblue">
 
-    <h2 style="text-align: center"><c:out value="Вход в личный кабинет"/></h2>
+    <h2 style="text-align: center"><spring:message code="LoginAfterRegistration.enter"/></h2>
     <form style="text-align: center" action="${pageContext.request.contextPath}/personal" method="post">
         <fieldset>
-            <legend><c:out value="Введите ваш логин и пароль"/></legend>
-            <br/><label  for="login">Логин</label>
+            <legend><spring:message code="LoginAfterRegistration.logIn"/></legend>
+            <br/><label  for="login"><spring:message code="LoginAfterRegistration.login"/></label>
             <br/><input  id="login" type="text" name="login"/><br/>
-            <br/><label  for="password">Пароль</label>
+            <br/><label  for="password"><spring:message code="LoginAfterRegistration.password"/></label>
             <br/><input  id="password" type="password" name="password"/><br/>
             <br/><input  type="submit" value="Войти"/>
         </fieldset>
