--- a/web/src/main/webapp/WEB-INF/view/page/SuccessRegistrationNewUser.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/SuccessRegistrationNewUser.jspx
@@ -6,21 +6,21 @@
         <title>Personal area</title>
     </head>
     <body style="background-color: powderblue">
-    <h2 style="text-align: center"><c:out value="Регистрация прошла успешно"/></h2>
+    <h2 style="text-align: center"><spring:message code="SuccessRegistrationNewUser.seccess"/></h2>
     <p style="align-content: center"/>
     <form style="text-align: center">
         <fieldset>
-            <legend><c:out value="Ваши данные для входа в личный кабинет"/></legend>
+            <legend><spring:message code="SuccessRegistrationNewUser.details"/></legend>
             <c:if test="${student != null}">
-                <h3><c:out value="Ваш логин"/></h3>
+                <h3><spring:message code="SuccessRegistrationNewUser.login"/></h3>
                 <h2><c:out value="${student.name}"/></h2>
-                <br/><h3><c:out value="Ваш пароль"/></h3>
+                <br/><h3><spring:message code="SuccessRegistrationNewUser.password"/></h3>
                 <h2><c:out value="${student.secondName}${student.id}"/></h2>
             </c:if>
             <c:if test="${teacher != null}">
-                <h3><c:out value="Ваш логин"/></h3>
+                <h3><spring:message code="SuccessRegistrationNewUser.login"/></h3>
                 <h2><c:out value="${teacher.name}"/></h2>
-                <br/><h3><c:out value="Ваш пароль"/></h3>
+                <br/><h3><spring:message code="SuccessRegistrationNewUser.password"/></h3>
                 <h2><c:out value="${teacher.secondName}${teacher.id}"/></h2>
             </c:if>
         </fieldset>
@@ -28,7 +28,7 @@
 
 
     <form style="text-align: center" action="${pageContext.request.contextPath}/loginAfterRegistration" method="get">
-        <h3><c:out value="Войти в личный кабинет"/></h3>
+        <h3><spring:message code="SuccessRegistrationNewUser.enter"/></h3>
         <input type="submit" value="Войти"/>
     </form>
     </body>
