--- a/web/src/main/webapp/WEB-INF/view/common/header.jspx
+++ b/web/src/main/webapp/WEB-INF/view/common/header.jspx
@@ -4,9 +4,8 @@
     <head><title>Title</title></head>
     <body>
     <header class="clearfix">
-        <h2>Вы находитесь на сайте лучшего образовательного центра</h2>
-<!--        <a href="${requestScope['javax.servlet.forward.request_uri']}?locale=ru" style="padding: 5px">RU</a>-->
-<!--        <a href="${requestScope['javax.servlet.forward.request_uri']}?locale=en" style="padding: 5px">EN</a>-->
+        <h2><spring:message code="header"/></h2>
+<!--        <img src="${pageContext.request.contextPath}/images/1.jpg" width="100" height="100"/>-->
     </header>
     </body>
     </html>
