--- a/web/src/main/webapp/WEB-INF/view/page/ValidationStudyPage.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/ValidationStudyPage.jspx
@@ -7,15 +7,15 @@
         <title>Study registration</title>
     </head>
     <body style="background-color: powderblue">
-    <h2 style="text-align: center"><c:out value="Для доступа к данному ресурсу вам неомходимо войти под своей учетной записью"/></h2>
+    <h2 style="text-align: center"><spring:message code="ValidationStudyPage.access"/></h2>
     </body>
     </html>
     <form style="text-align: center" action="${pageContext.request.contextPath}/EnterFromStartPage" method="get">
-        <h3><c:out value="Войти"/></h3>
+        <h3><spring:message code="ValidationStudyPage.login"/></h3>
         <input type="submit" value="Войти"/>
     </form>
     <form style="text-align: center" action="${pageContext.request.contextPath}/" method="get">
-        <h3><c:out value="Зарегистрироваться"/></h3>
-        <input type="submit" value="Зарегистрироваться"/>
+        <h3><spring:message code="ValidationStudyPage.return"/></h3>
+        <input type="submit" value="Вернуться"/>
     </form>
 </jsp:root>
