--- a/web/src/main/webapp/WEB-INF/view/page/StudentPersonalArea.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/StudentPersonalArea.jspx
@@ -154,29 +154,29 @@
             <fieldset>
                 <br/><label for="newPassword"><spring:message code="StudentPersonalArea.changePassword"/></label>
                 <br/><input id="newPassword" type="text" name="newPassword"/><br/>
-                <br/><input type="text" value="Изменить" hidden="hidden"/>
+<!--                <br/><input type="text" value="Изменить" hidden="hidden"/>-->
                 <button><spring:message code="button.change"/></button>
             </fieldset>
         </form>
         <form style="text-align: center" action="${pageContext.request.contextPath}/study" method="post">
             <fieldset>
                 <legend><spring:message code="StudentPersonalArea.lessonPlan"/></legend>
-                <br/><input type="text" name="logout" value="Посмотреть" hidden="hidden"/>
-                <button><spring:message code="button.view"/></button>
+<!--                <br/><input type="text" name="logout" value="Посмотреть" hidden="hidden"/>-->
+                <button name="view" value="Посмотреть" ><spring:message code="button.view"/></button>
             </fieldset>
         </form>
-        <form style="text-align: center" action="${pageContext.request.contextPath}/customLogout" method="get">
+        <form style="text-align: center" action="${pageContext.request.contextPath}/customLogout">
             <fieldset>
                 <legend><spring:message code="StudentPersonalArea.logout"/></legend>
-                <br/><input type="text" name="logout" value="logout" hidden="hidden"/>
-                <button><spring:message code="button.logout"/></button>
+<!--                <br/><input type="text" name="logout" value="logout" hidden="hidden"/>-->
+                <button name="logout" value="logout" ><spring:message code="button.logout"/></button>
             </fieldset>
         </form>
-        <form style="text-align: center" action="${pageContext.request.contextPath}/escape" method="get">
+        <form style="text-align: center" action="${pageContext.request.contextPath}/escape">
             <fieldset>
                 <legend><spring:message code="StudentPersonalArea.finish"/></legend>
-                <br/><input type="text" name="escape" value="escape" hidden="hidden"/>
-                <button><spring:message code="button.leave"/></button>
+<!--                <br/><input type="text" name="escape" value="escape" hidden="hidden"/>-->
+                <button name="escape" value="escape" ><spring:message code="button.leave"/></button>
             </fieldset>
         </form>
     </c:if>
