--- a/web/src/main/webapp/WEB-INF/view/page/TeacherPersonalArea.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/TeacherPersonalArea.jspx
@@ -27,7 +27,7 @@
                     <br/><input id="startDate" type="date" name="startDate"/><br/>
                     <br/><label for="endDate"><spring:message code="TeacherPersonalArea.end"/></label>
                     <br/><input id="endDate" type="date" name="endDate"/><br/>
-                    <br/><input type="text" value="Объявить" hidden="hidden"/>
+<!--                    <br/><input type="text" value="Объявить" hidden="hidden"/>-->
                     <button><spring:message code="button.announce"/></button>
                 </fieldset>
             </form>
@@ -113,22 +113,22 @@
             <fieldset>
                 <br/><label  for="newPasswords"><spring:message code="TeacherPersonalArea.changePassword"/></label>
                 <br/><input  id="newPasswords" type="text" name="newPasswords"/><br/>
-                <br/><input  type="text" value="Изменить" hidden="hidden"/>
+<!--                <br/><input  type="text" value="Изменить" hidden="hidden"/>-->
                 <button><spring:message code="button.change"/></button>
             </fieldset>
         </form>
         <form style="text-align: center" action="${pageContext.request.contextPath}/customLogout">
             <fieldset>
                 <legend><spring:message code="TeacherPersonalArea.logout"/></legend>
-                <br/><input type="text" name="logout" value="logout" hidden="hidden"/>
-                <button><spring:message code="button.logout"/></button>
+<!--                <br/><input type="text" name="logout" value="logout" hidden="hidden"/>-->
+                <button name="logout" value="logout" ><spring:message code="button.logout"/></button>
             </fieldset>
         </form>
         <form style="text-align: center" action="${pageContext.request.contextPath}/escape">
             <fieldset>
                 <legend><spring:message code="TeacherPersonalArea.finish"/></legend>
-                <br/><input type="text" name="escape" value="escape" hidden="hidden"/>
-                <button><spring:message code="button.leave"/></button>
+<!--                <br/><input type="text" name="escape" value="escape" hidden="hidden"/>-->
+                <button name="escape" value="escape" ><spring:message code="button.leave"/></button>
             </fieldset>
         </form>
     </c:if>
@@ -136,7 +136,6 @@
     <form action="${pageContext.request.contextPath}/">
         <h3><spring:message code="TeacherPersonalArea.manePage"/></h3>
         <button><spring:message code="button.return"/></button>
-<!--        <input type="submit" value="Перейти"/>-->
     </form>
 
     </body>
