--- a/web/src/main/webapp/WEB-INF/view/page/LoginFromStartPage.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/LoginFromStartPage.jspx
@@ -1,6 +1,5 @@
 <jsp:root xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
-          xmlns:c="http://java.sun.com/jsp/jstl/core"
           version="2.0" xmlns:spring="http://www.springframework.org/tags">
     <html>
     <body style="background-color: powderblue">
@@ -10,10 +9,9 @@
         <fieldset>
             <legend><spring:message code="LoginFromStartPage.logIn"/></legend>
             <br/><label  for="login"><spring:message code="LoginFromStartPage.login"/></label>
-            <br/><input  id="login" type="text" name="login"/><br/>
+            <br/><input  id="login" name="login"/><br/>
             <br/><label  for="password"><spring:message code="LoginFromStartPage.password"/></label>
             <br/><input  id="password" type="password" name="password"/><br/>
-<!--            <br/><input  type="text" value="Войти" hidden="hidden"/>-->
             <button><spring:message code="button.enter"/></button>
         </fieldset>
     </form>
