--- a/web/src/main/webapp/WEB-INF/view/page/PHPTestPage.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/PHPTestPage.jspx
@@ -13,21 +13,20 @@
         <fieldset>
             <legend><spring:message code="PHPTestPage.answer"/></legend>
             <label for="salary">PHP is a ... typing programming language</label>
-            <input id="salary" type="text" name="first"/><br/>
+            <input id="salary" name="first"/><br/>
 
             <label for="fszn">How many scalar data types in PHP?</label>
-            <input id="fszn" type="text" name="second"/><br/>
+            <input id="fszn" name="second"/><br/>
 
             <label for="insurance">What character is used to access variables?</label>
-            <input id="insurance" type="text" name="third"/><br/>
+            <input id="insurance" name="third"/><br/>
 
             <label for="incomeTax">Starting with which version of PHP has full support for object-oriented programming?</label>
-            <input id="incomeTax" type="text" name="fourth"/><br/>
+            <input id="incomeTax" name="fourth"/><br/>
 
             <label for="unoinDeductions">What is «Paamayim Nekudotayim» ?</label>
-            <input id="unoinDeductions" type="text" name="fifth"/><br/>
+            <input id="unoinDeductions" name="fifth"/><br/>
 
-<!--            <input type="text" name="test" value="PHP" hidden="hidden"/>-->
             <button name="test" value="PHP" ><spring:message code="button.checkTest"/></button>
         </fieldset>
     </form>
