--- a/web/src/main/webapp/WEB-INF/view/page/StudentPersonalArea.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/StudentPersonalArea.jspx
@@ -13,178 +13,175 @@
     </head>
     <body style="background-color: powderblue">
 
-    <c:if test="${student != null}">
-        <c:if test="${studentOnCurs == false}">
 
-            <c:if test="${javaCurs.end != null and studentOnCurs == false}">
-                    <h3 style="text-align: center"><spring:message code="StudentPersonalArea.avJava"/></h3>
-                    <table style="width: 100%">
-                        <tr>
-                            <td><spring:message code="StudentPersonalArea.courseName"/></td>
-                            <td><c:out value="${javaCurs.name}"/></td>
-                        </tr>
-                        <tr>
-                            <td><spring:message code="StudentPersonalArea.startDate"/></td>
-                            <td><c:out value="${javaCurs.start}"/></td>
-                        </tr>
-                        <tr>
-                            <td><spring:message code="StudentPersonalArea.endDate"/></td>
-                            <td><c:out value="${javaCurs.end}"/></td>
-                        </tr>
-                    </table>
-            </c:if>
-            <c:if test="${phpCurs.end != null and studentOnCurs == false}">
-                    <h3 style="text-align: center"><spring:message code="StudentPersonalArea.avPHP"/></h3>
-                    <table style="width: 100%">
-                        <tr>
-                            <td><spring:message code="StudentPersonalArea.courseName"/></td>
-                            <td><c:out value="${phpCurs.name}"/></td>
-                        </tr>
-                        <tr>
-                            <td><spring:message code="StudentPersonalArea.startDate"/></td>
-                            <td><c:out value="${phpCurs.start}"/></td>
-                        </tr>
-                        <tr>
-                            <td><spring:message code="StudentPersonalArea.endDate"/></td>
-                            <td><c:out value="${phpCurs.end}"/></td>
-                        </tr>
-                    </table>
-            </c:if>
-            <c:if test="${cCurs.end != null and studentOnCurs == false}">
-                <h3 style="text-align: center"><spring:message code="StudentPersonalArea.avC"/></h3>
-                <table style="width: 100%">
-                    <tr>
-                        <td><spring:message code="StudentPersonalArea.courseName"/></td>
-                        <td><c:out value="${cCurs.name}"/></td>
-                    </tr>
-                    <tr>
-                        <td><spring:message code="StudentPersonalArea.startDate"/></td>
-                        <td><c:out value="${cCurs.start}"/></td>
-                    </tr>
-                    <tr>
-                        <td><spring:message code="StudentPersonalArea.endDate"/></td>
-                        <td><c:out value="${cCurs.end}"/></td>
-                    </tr>
-                </table>
-            </c:if>
-            <form style="text-align: center" action="${pageContext.request.contextPath}/study" method="post">
-                <fieldset>
-                    <h2 style="text-align: center"><spring:message code="StudentPersonalArea.choise"/></h2>
-                    <label>
-                        <input type="checkbox" name="javaReg" value="java"/>
-                    </label> Java
-                    <label>
-                        <input type="checkbox" name="phpReg" value="php"/>
-                    </label> PHP
-                    <label>
-                        <input type="checkbox" name="cReg" value="c++"/>
-                    </label> C++
-                    <br/><input type="text" name="userType" value="Записаться" hidden="hidden"/>
-                    <button><spring:message code="button.chooseCourse"/></button>
-                </fieldset>
-            </form>
+    <c:if test="${studentOnCurs == false}">
+
+        <c:if test="${javaCurs.end != null and studentOnCurs == false}">
+            <h3 style="text-align: center"><spring:message code="StudentPersonalArea.avJava"/></h3>
+            <table style="width: 100%">
+                <tr>
+                    <td><spring:message code="StudentPersonalArea.courseName"/></td>
+                    <td><c:out value="${javaCurs.name}"/></td>
+                </tr>
+                <tr>
+                    <td><spring:message code="StudentPersonalArea.startDate"/></td>
+                    <td><c:out value="${javaCurs.start}"/></td>
+                </tr>
+                <tr>
+                    <td><spring:message code="StudentPersonalArea.endDate"/></td>
+                    <td><c:out value="${javaCurs.end}"/></td>
+                </tr>
+            </table>
         </c:if>
-
-
-        <c:if test="${studentOnCurs == true}">
-
-            <c:if test="${classmatesJava != null}">
-
-                <h2 style="text-align: center"><spring:message code="StudentPersonalArea.javaStudents"/></h2>
-                <table style="width: 100%">
-                    <tr>
-                        <th><spring:message code="StudentPersonalArea.name"/></th>
-                        <th><spring:message code="StudentPersonalArea.secondName"/></th>
-                        <th><spring:message code="StudentPersonalArea.email"/></th>
-                    </tr>
-
-                    <c:forEach var="classmate" items="${classmatesJava}">
-                        <tr>
-                            <td>${classmate.name}</td>
-                            <td>${classmate.secondName}</td>
-                            <td>${classmate.email}</td>
-                        </tr>
-                    </c:forEach>
-                </table>
-            </c:if>
-            <hr/>
-
-            <c:if test="${classmatesPHP != null}">
-
-                <h2 style="text-align: center"><spring:message code="StudentPersonalArea.phpStudents"/></h2>
-                <table style="width: 100%">
-                    <tr>
-                        <th><spring:message code="StudentPersonalArea.name"/></th>
-                        <th><spring:message code="StudentPersonalArea.secondName"/></th>
-                        <th><spring:message code="StudentPersonalArea.email"/></th>
-                    </tr>
-
-                    <c:forEach var="classmate" items="${classmatesPHP}">
-                        <tr>
-                            <td>${classmate.name}</td>
-                            <td>${classmate.secondName}</td>
-                            <td>${classmate.email}</td>
-                        </tr>
-                    </c:forEach>
-                </table>
-            </c:if>
-            <hr/>
-            <c:if test="${classmatesC != null}">
-
-                <h2 style="text-align: center"><spring:message code="StudentPersonalArea.cStudents"/></h2>
-                <table style="width: 100%">
-                    <tr>
-                        <th><spring:message code="StudentPersonalArea.name"/></th>
-                        <th><spring:message code="StudentPersonalArea.secondName"/></th>
-                        <th><spring:message code="StudentPersonalArea.email"/></th>
-                    </tr>
-
-                    <c:forEach var="classmate" items="${classmatesC}">
-                        <tr>
-                            <td>${classmate.name}</td>
-                            <td>${classmate.secondName}</td>
-                            <td>${classmate.email}</td>
-                        </tr>
-                    </c:forEach>
-                </table>
-            </c:if>
+        <c:if test="${phpCurs.end != null and studentOnCurs == false}">
+            <h3 style="text-align: center"><spring:message code="StudentPersonalArea.avPHP"/></h3>
+            <table style="width: 100%">
+                <tr>
+                    <td><spring:message code="StudentPersonalArea.courseName"/></td>
+                    <td><c:out value="${phpCurs.name}"/></td>
+                </tr>
+                <tr>
+                    <td><spring:message code="StudentPersonalArea.startDate"/></td>
+                    <td><c:out value="${phpCurs.start}"/></td>
+                </tr>
+                <tr>
+                    <td><spring:message code="StudentPersonalArea.endDate"/></td>
+                    <td><c:out value="${phpCurs.end}"/></td>
+                </tr>
+            </table>
         </c:if>
-        <hr/>
-        <form style="text-align: center" action="${pageContext.request.contextPath}/change" method="post">
-            <fieldset>
-                <br/><label for="newPassword"><spring:message code="StudentPersonalArea.changePassword"/></label>
-                <br/><input id="newPassword" type="text" name="newPassword"/><br/>
-<!--                <br/><input type="text" value="Изменить" hidden="hidden"/>-->
-                <button><spring:message code="button.change"/></button>
-            </fieldset>
-        </form>
+        <c:if test="${cCurs.end != null and studentOnCurs == false}">
+            <h3 style="text-align: center"><spring:message code="StudentPersonalArea.avC"/></h3>
+            <table style="width: 100%">
+                <tr>
+                    <td><spring:message code="StudentPersonalArea.courseName"/></td>
+                    <td><c:out value="${cCurs.name}"/></td>
+                </tr>
+                <tr>
+                    <td><spring:message code="StudentPersonalArea.startDate"/></td>
+                    <td><c:out value="${cCurs.start}"/></td>
+                </tr>
+                <tr>
+                    <td><spring:message code="StudentPersonalArea.endDate"/></td>
+                    <td><c:out value="${cCurs.end}"/></td>
+                </tr>
+            </table>
+        </c:if>
         <form style="text-align: center" action="${pageContext.request.contextPath}/study" method="post">
             <fieldset>
-                <legend><spring:message code="StudentPersonalArea.lessonPlan"/></legend>
-<!--                <br/><input type="text" name="logout" value="Посмотреть" hidden="hidden"/>-->
-                <button name="view" value="Посмотреть" ><spring:message code="button.view"/></button>
-            </fieldset>
-        </form>
-        <form style="text-align: center" action="${pageContext.request.contextPath}/customLogout">
-            <fieldset>
-                <legend><spring:message code="StudentPersonalArea.logout"/></legend>
-<!--                <br/><input type="text" name="logout" value="logout" hidden="hidden"/>-->
-                <button name="logout" value="logout" ><spring:message code="button.logout"/></button>
-            </fieldset>
-        </form>
-        <form style="text-align: center" action="${pageContext.request.contextPath}/escape">
-            <fieldset>
-                <legend><spring:message code="StudentPersonalArea.finish"/></legend>
-<!--                <br/><input type="text" name="escape" value="escape" hidden="hidden"/>-->
-                <button name="escape" value="escape" ><spring:message code="button.leave"/></button>
+                <h2 style="text-align: center"><spring:message code="StudentPersonalArea.choise"/></h2>
+                <label>
+                    <input type="checkbox" name="javaReg" value="java"/>
+                </label> Java
+                <label>
+                    <input type="checkbox" name="phpReg" value="php"/>
+                </label> PHP
+                <label>
+                    <input type="checkbox" name="cReg" value="c++"/>
+                </label> C++
+                <button name="userType" value="Записаться"><spring:message code="button.chooseCourse"/></button>
             </fieldset>
         </form>
     </c:if>
+
+
+    <c:if test="${studentOnCurs == true}">
+
+        <c:if test="${classmatesJava != null}">
+
+            <h2 style="text-align: center"><spring:message code="StudentPersonalArea.javaStudents"/></h2>
+            <table style="width: 100%">
+                <tr>
+                    <th><spring:message code="StudentPersonalArea.name"/></th>
+                    <th><spring:message code="StudentPersonalArea.secondName"/></th>
+                    <th><spring:message code="StudentPersonalArea.email"/></th>
+                </tr>
+
+                <c:forEach var="classmate" items="${classmatesJava}">
+                    <tr>
+                        <td>${classmate.name}</td>
+                        <td>${classmate.secondName}</td>
+                        <td>${classmate.email}</td>
+                    </tr>
+                </c:forEach>
+            </table>
+        </c:if>
+        <hr/>
+
+        <c:if test="${classmatesPHP != null}">
+
+            <h2 style="text-align: center"><spring:message code="StudentPersonalArea.phpStudents"/></h2>
+            <table style="width: 100%">
+                <tr>
+                    <th><spring:message code="StudentPersonalArea.name"/></th>
+                    <th><spring:message code="StudentPersonalArea.secondName"/></th>
+                    <th><spring:message code="StudentPersonalArea.email"/></th>
+                </tr>
+
+                <c:forEach var="classmate" items="${classmatesPHP}">
+                    <tr>
+                        <td>${classmate.name}</td>
+                        <td>${classmate.secondName}</td>
+                        <td>${classmate.email}</td>
+                    </tr>
+                </c:forEach>
+            </table>
+        </c:if>
+        <hr/>
+        <c:if test="${classmatesC != null}">
+
+            <h2 style="text-align: center"><spring:message code="StudentPersonalArea.cStudents"/></h2>
+            <table style="width: 100%">
+                <tr>
+                    <th><spring:message code="StudentPersonalArea.name"/></th>
+                    <th><spring:message code="StudentPersonalArea.secondName"/></th>
+                    <th><spring:message code="StudentPersonalArea.email"/></th>
+                </tr>
+
+                <c:forEach var="classmate" items="${classmatesC}">
+                    <tr>
+                        <td>${classmate.name}</td>
+                        <td>${classmate.secondName}</td>
+                        <td>${classmate.email}</td>
+                    </tr>
+                </c:forEach>
+            </table>
+        </c:if>
+    </c:if>
+    <hr/>
+    <form style="text-align: center" action="${pageContext.request.contextPath}/change" method="post">
+        <fieldset>
+            <br/><label for="newPassword"><spring:message code="StudentPersonalArea.changePassword"/></label>
+            <br/><input id="newPassword" name="newPassword"/><br/>
+            <button><spring:message code="button.change"/></button>
+        </fieldset>
+    </form>
+    <form style="text-align: center" action="${pageContext.request.contextPath}/study" method="post">
+
+        <fieldset>
+            <legend><spring:message code="StudentPersonalArea.lessonPlan"/></legend>
+            <button name="view" value="Посмотреть"><spring:message code="button.view"/></button>
+        </fieldset>
+    </form>
+    <form style="text-align: center" action="${pageContext.request.contextPath}/customLogout">
+
+        <fieldset>
+            <legend><spring:message code="StudentPersonalArea.logout"/></legend>
+
+            <button name="logout" value="logout"><spring:message code="button.logout"/></button>
+        </fieldset>
+    </form>
+    <form style="text-align: center" action="${pageContext.request.contextPath}/escape">
+
+        <fieldset>
+            <legend><spring:message code="StudentPersonalArea.finish"/></legend>
+            <button name="escape" value="escape"><spring:message code="button.leave"/></button>
+        </fieldset>
+    </form>
     <hr/>
     <form action="${pageContext.request.contextPath}/">
         <h3><spring:message code="StudentPersonalArea.manePage"/></h3>
         <button><spring:message code="button.return"/></button>
-<!--        <input type="submit" value="Перейти"/>-->
     </form>
 
     </body>
