--- a/web/src/main/webapp/WEB-INF/view/page/StudentRegistration.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/StudentRegistration.jspx
@@ -1,6 +1,5 @@
 <jsp:root xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
-          xmlns:c="http://java.sun.com/jsp/jstl/core"
           version="2.0" xmlns:spring="http://www.springframework.org/tags">
     <html>
     <head><title>StudentRegistration</title></head>
@@ -13,13 +12,13 @@
         <fieldset>
             <legend><spring:message code="StudentRegistration.data"/></legend>
             <br/><label for="name"><spring:message code="StudentRegistration.name"/></label>
-            <br/><input id="name" type="text" name="name"/><br/>
+            <br/><input id="name" name="name"/><br/>
             <br/><label for="secondName"><spring:message code="StudentRegistration.secondName"/></label>
-            <br/><input id="secondName" type="text" name="secondName"/><br/>
+            <br/><input id="secondName" name="secondName"/><br/>
             <br/><label for="email"><spring:message code="StudentRegistration.email"/></label>
-            <br/><input id="email" type="text" name="email"/><br/>
+            <br/><input id="email" name="email"/><br/>
             <br/><label for="age"><spring:message code="StudentRegistration.age"/></label>
-            <br/><input id="age" type="text" name="age"/><br/>
+            <br/><input id="age"  name="age"/><br/>
 
             <h2 style="text-align: center"><spring:message code="StudentRegistration.lang"/></h2>
             <label>
@@ -31,11 +30,8 @@
             <label>
                 <input type="checkbox" name="langTypeC" value="c++"/>
             </label> C++
-
-<!--            <br/><input type="text" name="userType" value="student" hidden="hidden"/>-->
-            <button name="userType" value="student" ><spring:message code="button.registration"/></button>
+            <br/><button name="userType" value="student" ><spring:message code="button.registration"/></button>
         </fieldset>
-
     </form>
     </body>
     </html>
