--- a/web/src/main/webapp/WEB-INF/view/page/TeacherPersonalArea.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/TeacherPersonalArea.jspx
@@ -5,7 +5,7 @@
     <html>
     <head>
         <style>
-            table, th, td{
+            table, th, td {
                 border: 1px solid black;
             }
         </style>
@@ -14,124 +14,119 @@
     <body style="background-color: powderblue">
     <h1 style="text-align: center"><spring:message code="TeacherPersonalArea.logged"/></h1>
 
-    <c:if test="${teacher != null}">
-        <c:if test="${curs.end == null}">
-            <h3 style="text-align: center"><spring:message code="TeacherPersonalArea.announce"/></h3>
 
-            <form style="text-align: center" action="${pageContext.request.contextPath}/curs" method="post">
-                <fieldset>
-                    <legend><spring:message code="TeacherPersonalArea.regData"/></legend>
-                    <br/><label for="name"><spring:message code="TeacherPersonalArea.courseName"/></label>
-                    <br/><input id="name" type="text" name="name"/><br/>
-                    <br/><label for="startDate"><spring:message code="TeacherPersonalArea.start"/></label>
-                    <br/><input id="startDate" type="date" name="startDate"/><br/>
-                    <br/><label for="endDate"><spring:message code="TeacherPersonalArea.end"/></label>
-                    <br/><input id="endDate" type="date" name="endDate"/><br/>
-<!--                    <br/><input type="text" value="Объявить" hidden="hidden"/>-->
-                    <button><spring:message code="button.announce"/></button>
-                </fieldset>
-            </form>
-        </c:if>
-        <c:if test="${curs.end != null}">
-            <h2 style="text-align: center"><spring:message code="TeacherPersonalArea.myCourse"/></h2>
-            <table style="width: 100%">
-                <tr>
-                    <td><spring:message code="TeacherPersonalArea.courseName"/></td>
-                    <td><c:out value="${curs.name}"/></td>
-                </tr>
-                <tr>
-                    <td><spring:message code="TeacherPersonalArea.start"/></td>
-                    <td><c:out value="${curs.start}"/></td>
-                </tr>
-                <tr>
-                    <td><spring:message code="TeacherPersonalArea.end"/></td>
-                    <td><c:out value="${curs.end}"/></td>
-                </tr>
-            </table>
-            <hr/>
-            <h2 style="text-align: center"><spring:message code="TeacherPersonalArea.teachersList"/></h2>
-            <table style="width: 100%">
-                <tr>
-                    <th><spring:message code="TeacherPersonalArea.name"/></th>
-                    <th><spring:message code="TeacherPersonalArea.secondName"/></th>
-                    <th><spring:message code="TeacherPersonalArea.email"/></th>
-                </tr>
-                <c:forEach var="teachers" items="${teachers}">
-                    <tr>
-                        <td>${teachers.name}</td>
-                        <td>${teachers.secondName}</td>
-                        <td>${teachers.email}</td>
-                    </tr>
-                </c:forEach>
-            </table>
-            <hr/>
-            <h2 style="text-align: center"><spring:message code="TeacherPersonalArea.studentsList"/></h2>
-            <table style="width: 100%">
-                <tr>
-                    <th><spring:message code="TeacherPersonalArea.name"/></th>
-                    <th><spring:message code="TeacherPersonalArea.secondName"/></th>
-                    <th><spring:message code="TeacherPersonalArea.email"/></th>
-                    <th><spring:message code="TeacherPersonalArea.score"/></th>
-                </tr>
+    <c:if test="${curs.end == null}">
+        <h3 style="text-align: center"><spring:message code="TeacherPersonalArea.announce"/></h3>
 
-                <c:forEach var="student" items="${students}">
-                    <tr>
-                        <td>${student.name}</td>
-                        <td>${student.secondName}</td>
-                        <td>${student.email}</td>
-                        <td>${student.grade}</td>
-                    </tr>
-                </c:forEach>
-            </table>
-
-            <c:if test="${currentPage != 1}">
-                <td><a href="${pageContext.request.contextPath}/pagination?page=${currentPage - 1}">Previous</a></td>
-            </c:if>
-
-
-            <table border="1" cellpadding="5" cellspacing="5">
-                <tr>
-                    <c:forEach begin="1" end="${noOfPages}" var="i">
-                        <c:choose>
-                            <c:when test="${currentPage eq i}">
-                                <td>${i}</td>
-                            </c:when>
-                            <c:otherwise>
-                                <td><a href="${pageContext.request.contextPath}/pagination?page=${i}">${i}</a></td>
-                            </c:otherwise>
-                        </c:choose>
-                    </c:forEach>
-                </tr>
-            </table>
-
-            <c:if test="${currentPage lt noOfPages}">
-                <td><a href="${pageContext.request.contextPath}/pagination?page=${currentPage + 1}">Next</a></td>
-            </c:if>
-
-        </c:if>
-        <form style="text-align: center" action="${pageContext.request.contextPath}/change" method="post">
+        <form style="text-align: center" action="${pageContext.request.contextPath}/curs" method="post">
             <fieldset>
-                <br/><label  for="newPasswords"><spring:message code="TeacherPersonalArea.changePassword"/></label>
-                <br/><input  id="newPasswords" type="text" name="newPasswords"/><br/>
-<!--                <br/><input  type="text" value="Изменить" hidden="hidden"/>-->
-                <button><spring:message code="button.change"/></button>
-            </fieldset>
-        </form>
-        <form style="text-align: center" action="${pageContext.request.contextPath}/customLogout">
-            <fieldset>
-                <legend><spring:message code="TeacherPersonalArea.logout"/></legend>
-<!--                <br/><input type="text" name="logout" value="logout" hidden="hidden"/>-->
-                <button name="logout" value="logout" ><spring:message code="button.logout"/></button>
-            </fieldset>
-        </form>
-        <form style="text-align: center" action="${pageContext.request.contextPath}/escape">
-            <fieldset>
-                <legend><spring:message code="TeacherPersonalArea.finish"/></legend>
-<!--                <br/><input type="text" name="escape" value="escape" hidden="hidden"/>-->
-                <button name="escape" value="escape" ><spring:message code="button.leave"/></button>
+                <legend><spring:message code="TeacherPersonalArea.regData"/></legend>
+                <br/><label for="name"><spring:message code="TeacherPersonalArea.courseName"/></label>
+                <br/><input id="name" name="name"/><br/>
+                <br/><label for="startDate"><spring:message code="TeacherPersonalArea.start"/></label>
+                <br/><input id="startDate" type="date" name="startDate"/><br/>
+                <br/><label for="endDate"><spring:message code="TeacherPersonalArea.end"/></label>
+                <br/><input id="endDate" type="date" name="endDate"/><br/>
+                <button><spring:message code="button.announce"/></button>
             </fieldset>
         </form>
     </c:if>
+    <c:if test="${curs.end != null}">
+        <h2 style="text-align: center"><spring:message code="TeacherPersonalArea.myCourse"/></h2>
+        <table style="width: 100%">
+            <tr>
+                <td><spring:message code="TeacherPersonalArea.courseName"/></td>
+                <td><c:out value="${curs.name}"/></td>
+            </tr>
+            <tr>
+                <td><spring:message code="TeacherPersonalArea.start"/></td>
+                <td><c:out value="${curs.start}"/></td>
+            </tr>
+            <tr>
+                <td><spring:message code="TeacherPersonalArea.end"/></td>
+                <td><c:out value="${curs.end}"/></td>
+            </tr>
+        </table>
+        <hr/>
+        <h2 style="text-align: center"><spring:message code="TeacherPersonalArea.teachersList"/></h2>
+        <table style="width: 100%">
+            <tr>
+                <th><spring:message code="TeacherPersonalArea.name"/></th>
+                <th><spring:message code="TeacherPersonalArea.secondName"/></th>
+                <th><spring:message code="TeacherPersonalArea.email"/></th>
+            </tr>
+            <c:forEach var="teachers" items="${teachers}">
+                <tr>
+                    <td>${teachers.name}</td>
+                    <td>${teachers.secondName}</td>
+                    <td>${teachers.email}</td>
+                </tr>
+            </c:forEach>
+        </table>
+        <hr/>
+        <h2 style="text-align: center"><spring:message code="TeacherPersonalArea.studentsList"/></h2>
+        <table style="width: 100%">
+            <tr>
+                <th><spring:message code="TeacherPersonalArea.name"/></th>
+                <th><spring:message code="TeacherPersonalArea.secondName"/></th>
+                <th><spring:message code="TeacherPersonalArea.email"/></th>
+                <th><spring:message code="TeacherPersonalArea.score"/></th>
+            </tr>
+
+            <c:forEach var="student" items="${students}">
+                <tr>
+                    <td>${student.name}</td>
+                    <td>${student.secondName}</td>
+                    <td>${student.email}</td>
+                    <td>${student.grade}</td>
+                </tr>
+            </c:forEach>
+        </table>
+
+        <c:if test="${currentPage != 1}">
+            <td><a href="${pageContext.request.contextPath}/pagination?page=${currentPage - 1}">Previous</a></td>
+        </c:if>
+
+
+        <table border="1" cellpadding="5" cellspacing="5">
+            <tr>
+                <c:forEach begin="1" end="${noOfPages}" var="i">
+                    <c:choose>
+                        <c:when test="${currentPage eq i}">
+                            <td>${i}</td>
+                        </c:when>
+                        <c:otherwise>
+                            <td><a href="${pageContext.request.contextPath}/pagination?page=${i}">${i}</a></td>
+                        </c:otherwise>
+                    </c:choose>
+                </c:forEach>
+            </tr>
+        </table>
+
+        <c:if test="${currentPage lt noOfPages}">
+            <td><a href="${pageContext.request.contextPath}/pagination?page=${currentPage + 1}">Next</a></td>
+        </c:if>
+
+    </c:if>
+    <form style="text-align: center" action="${pageContext.request.contextPath}/change" method="post">
+        <fieldset>
+            <br/><label for="newPasswords"><spring:message code="TeacherPersonalArea.changePassword"/></label>
+            <br/><input id="newPasswords" type="text" name="newPasswords"/><br/>
+            <button><spring:message code="button.change"/></button>
+        </fieldset>
+    </form>
+    <form style="text-align: center" action="${pageContext.request.contextPath}/customLogout">
+        <fieldset>
+            <legend><spring:message code="TeacherPersonalArea.logout"/></legend>
+            <button name="logout" value="logout"><spring:message code="button.logout"/></button>
+        </fieldset>
+    </form>
+    <form style="text-align: center" action="${pageContext.request.contextPath}/escape">
+        <fieldset>
+            <legend><spring:message code="TeacherPersonalArea.finish"/></legend>
+            <button name="escape" value="escape"><spring:message code="button.leave"/></button>
+        </fieldset>
+    </form>
     <hr/>
     <form action="${pageContext.request.contextPath}/">
         <h3><spring:message code="TeacherPersonalArea.manePage"/></h3>
